# rpcBeat

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
agent/: rpcbeat-agent.json
app/: __init__.py  config.py  main.py  mcp_server.py  models.py
app/api/: routes.py
app/cli/: __init__.py  main.py
app/dune/: __init__.py  cli.py  client.py  evaluator.py  registry.py
app/services/: advisor.py  dune_queries.py  risk.py
contracts/erc8004/: README.md  foundry.toml
contracts/erc8004/script/: FoundryCheats.sol  RegisterRPCBeatAgent.s.sol  SetRPCBeatDemoMetadata.s.sol
contracts/erc8004/src/: IIdentityRegistry.sol
contracts/erc8004/test/: MockIdentityRegistry.t.sol
evals/canaries/: baseline.json
queries/: block_trade_mev_share.json  block_trade_mev_share.sql  builder_sandwich_exposure.json  builder_sandwich_exposure.sql  emerging_sandwich_type2.json  emerging_sandwich_type2.sql  pair_token_risk.json  pair_token_risk.sql  registry.json  tx_execution_context.json  tx_execution_context.sql  wallet_builder_context.json  wallet_builder_context.sql  wallet_gas_sponsorship_context.json  wallet_gas_sponsorship_context.sql  wallet_mev_exposure.json  wallet_mev_exposure.sql  wallet_pool_context.json  wallet_pool_context.sql  wallet_route_context.json  wallet_route_context.sql
tests/: test_advisor.py  test_dune_cli.py  test_dune_client.py  test_query_metadata.py  test_risk.py
